[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/DialogGraph/Scenes/Nodes/SignalNode.gd" type="Script" id=1]

[node name="SignalNode" type="GraphNode"]
margin_right = 142.0
margin_bottom = 90.0
rect_min_size = Vector2( 180, 100 )
custom_constants/separation = 4
title = "SignalNode"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 164.0
margin_bottom = 44.0
text = "signal"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 16.0
margin_top = 48.0
margin_right = 164.0
margin_bottom = 72.0
placeholder_text = "String Dictionary Data"

[connection signal="resize_request" from="." to="." method="_on_SignalNode_resize_request"]
[connection signal="button_down" from="OptionButton" to="." method="_on_OptionButton_button_down"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="focus_exited" from="LineEdit" to="." method="_on_LineEdit_focus_exited"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
